--- a/deb/usr/share/locale/hu/LC_MESSAGES/gwget.po
+++ b/deb/usr/share/locale/hu/LC_MESSAGES/gwget.po
@@ -98,7 +98,7 @@ msgstr "Mindet megállít"
 
 # file: gwget, line: 1201
 msgid "Clear Completed"
-msgstr "Befejezettek elfelejtése"
+msgstr "Készek elfelejtése"
 
 # file: gwget, line: 1217
 msgid "Filename"
@@ -237,7 +237,7 @@ msgid "Target already exists, not renaming.\nFile: <tt>%s</tt>\nTarget: <tt>%s</
 msgstr "A célfájl már létezik, nincs átnevezés.\nFájl: <tt>%s</tt>\nCélfájl: <tt>%s</tt>"
 
 # file: gwget, line: 1344
-msgid "Refuse to move an incompleted file across filesystems."
+msgid "Refused moving an incompleted file across filesystems."
 msgstr "Nem helyezek át félkész letöltést másik fájlrendszerre."
 
 # file: gwget, line: 1700
